--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 sandbox
-src/pandorapsf/data/pandora_*_20220506.*
-src/pandorapsf/data/pandora_*_20210602.*
+src/pandorapsf/data/pandora_*20220506.*
+src/pandorapsf/data/pandora_*20210602.*
 
 # Mac things
 .DS_Store
