--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ astropy = "^5.3.3"
 rich = "^13.5.3"
 scipy = "^1.11.2"
 pandas = "^2.1.1"
+ipython = "^8.15.0"
 
 
 [tool.poetry.group.dev.dependencies]
