--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mkdocs = "^1.5.3"
 mkdocs-material = "^9.3.2"
 mkdocstrings = "^0.23.0"
 pytest = "^7.4.2"
+pysynphot = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
