--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ rich = "^13.5.3"
 scipy = "^1.11.2"
 pandas = "^2.1.1"
 ipython = "^8.15.0"
+tqdm = "^4.66.1"
 
 
 [tool.poetry.group.dev.dependencies]
