--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 sandbox
 src/pandorapsf/data/pandora_*20220506.*
 src/pandorapsf/data/pandora_*20210602.*
+src/pandorapsf/data/phoenix
 
 # Mac things
 .DS_Store
