--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ src/pandorapsf/data/pandora_*20220506.*
 src/pandorapsf/data/pandora_*20210602.*
 src/pandorapsf/data/phoenix
 src/pandorapsf/data/phoenix.zip
-
+src/pandorapsf/data/pandora_gaussian_psf.fits
 # Mac things
 .DS_Store
 
