--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 sandbox
-src/pandorapsf/data/pandora_*20220506.*
-src/pandorapsf/data/pandora_*20210602.*
+src/pandorapsf/data/pandora_vis*.*
+src/pandorapsf/data/pandora_nir*.*
 src/pandorapsf/data/phoenix
 src/pandorapsf/data/phoenix.zip
 src/pandorapsf/data/pandora_gaussian_psf.fits
