--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ scipy = "^1.11.2"
 pandas = "^2.1.1"
 ipython = "^8.15.0"
 tqdm = "^4.66.1"
+pandorasat = ">=0.5.6"
+lamatrix = "^0.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -30,6 +32,7 @@ pytest = "^7.4.2"
 pysynphot = "^2.0.0"
 memory-profiler = "^0.61.0"
 line-profiler = "^4.1.1"
+astroquery = "^0.4.6"
 
 [build-system]
 requires = ["poetry-core"]
