--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -12,6 +12,15 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
+
+    - name: Cache Poetry dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.cache/pypoetry
+            key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+            restore-keys: |
+              ${{ runner.os }}-poetry-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
