--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache Poetry dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.cache/pypoetry
+            key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+            restore-keys: |
+              ${{ runner.os }}-poetry-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
