--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "pandorapsf", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 pandorasat = ">=0.5.20"
+scipy = ">=1.13"
 
 [build-system]
 requires = ["poetry-core"]
