--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pandorapsf"
-version = "0.2.11"
+version = "0.3.0"
 description = ""
 authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
 readme = "README.md"
@@ -8,7 +8,8 @@ packages = [{include = "pandorapsf", from = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-pandorasat = ">=0.5.20"
+pandorasat = ">=0.5.24"
+sparse3d = ">=1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
