--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -8,22 +8,16 @@ jobs:
     name: flake8
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
-    - name: Cache Poetry dependencies
-          uses: actions/cache@v3
-          with:
-            path: ~/.cache/pypoetry
-            key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-poetry-
+        python-version: 3.9
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install poetry
-        poetry install
+        poetry install --with dev
     - name: Run flake8
       run: |
         make flake8
