--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
 theme:
   name: "material"
   icon:
-    logo: material/checkbox-blank
+    logo: material/blur
   features:
     - content.code.copy
     - content.code.annotate 
