--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "pandorapsf", from = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-pandorasat = ">=0.12.1"
+pandorasat = ">=0.12.2"
 sparse3d = ">=1.0.3"
 appdirs = "^1.4.4"
 numpy = ">=1.26.0"
@@ -30,6 +30,7 @@ mkdocs-include-markdown-plugin = "^7.1.4"
 mkdocstrings = {version = "^0.28.2", extras = ["python"]}
 jupyter-contrib-nbextensions = "^0.7.0"
 notebook = ">=6.0.0,<7.0.0"
+lamatrix = ">=1.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
