--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ src/pandorapsf/data/pandora_nir*.*
 src/pandorapsf/data/phoenix
 src/pandorapsf/data/phoenix.zip
 src/pandorapsf/data/pandora_gaussian_psf.fits
+docs/calibration/*.fits
+
 # Mac things
 .DS_Store
 
